--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Your page description" />
+    <meta name="keywords" content="bot, solana, profit, access" />
+    <meta property="og:title" content="Your Open Graph Title" />
+    <meta property="og:description" content="Your Open Graph Description" />
+    <meta property="og:image" content="URL to Your Image" />
+    <meta property="og:url" content="./src/assets/logo.png" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@YourTwitterHandle" />
+    <meta name="twitter:title" content="Your Twitter Title" />
+    <meta name="twitter:description" content="Your Twitter Description" />
+    <meta name="twitter:image" content="URL to Your Twitter Image" /> -->
     <title>Sanji</title>
   </head>
   <body>
