--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Your page description" />
-    <meta name="keywords" content="bot, solana, profit, access" />
-    <meta property="og:title" content="Your Open Graph Title" />
+    <meta name="keywords" content="bot, solana, profit, access, mint" />
+    <meta property="og:title" content="Sanji - Solana snipe bot" />
     <meta property="og:description" content="Your Open Graph Description" />
-    <meta property="og:image" content="URL to Your Image" />
-    <meta property="og:url" content="./src/assets/logo.png" />
+    <meta property="og:image" content="/og.png" />
+    <meta property="og:url" content="https://sanji-landing-page.vercel.app/" />
     <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@YourTwitterHandle" />
     <meta name="twitter:title" content="Your Twitter Title" />
