--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Sanji</title>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -11,14 +12,13 @@
     <meta name="keywords" content="bot, solana, profit, access, mint" />
     <meta property="og:title" content="Sanji - Solana snipe bot" />
     <meta property="og:description" content="Your Open Graph Description" />
-    <meta property="og:image" content="/og.png" />
+    <meta property="og:image" content="https://yewdwmvivehhkuol.public.blob.vercel-storage.com/og-Aj2DOHYJ9WLFfraVlHLoXSAI6uTDuV.png" />
     <meta property="og:url" content="https://sanji-landing-page.vercel.app/" />
     <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@YourTwitterHandle" />
     <meta name="twitter:title" content="Your Twitter Title" />
     <meta name="twitter:description" content="Your Twitter Description" />
     <meta name="twitter:image" content="URL to Your Twitter Image" /> -->
-    <title>Sanji</title>
   </head>
   <body>
     <div id="root"></div>
