--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Your page description" />
+    <meta name="description" content="Sanji description" />
     <meta name="keywords" content="bot, solana, profit, access, mint" />
     <meta property="og:title" content="Sanji - Solana snipe bot" />
-    <meta property="og:description" content="Your Open Graph Description" />
+    <meta property="og:description" content="Sanji description" />
     <meta property="og:image" content="https://yewdwmvivehhkuol.public.blob.vercel-storage.com/og-Aj2DOHYJ9WLFfraVlHLoXSAI6uTDuV.png" />
     <meta property="og:url" content="https://sanji-landing-page.vercel.app/" />
-    <!-- <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@YourTwitterHandle" />
     <meta name="twitter:title" content="Your Twitter Title" />
     <meta name="twitter:description" content="Your Twitter Description" />
-    <meta name="twitter:image" content="URL to Your Twitter Image" /> -->
+    <meta name="twitter:image" content="URL to Your Twitter Image" />
   </head>
   <body>
     <div id="root"></div>
